# Eagle

./: .env.example  .gitignore  .ocamlformat  Eagle.opam  Makefile  README.md  default.nix  dune-project  shell.nix
lib/: dune
nix/: default.nix
test/: dune
